changed some path in templates

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-info">
       <a routerLink="/" class="logo">
-        <img src="/assets/images/logotype.png" alt="Logo">
+        <img src="./assets/images/logotype.png" alt="Logo">
       </a>
       <div class="header-menu">
         <nav>
