--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -142,7 +142,7 @@
           <div class="review-item">
             <div class="review-item-head">
               <div class="review-item-image"
-                   style="background-image: url('/assets/images/reviews/{{review.image}}')">
+                   style="background-image: url('./assets/images/reviews/{{review.image}}')">
               </div>
               <div class="review-item-name">
                 {{review.name}}
