--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -327,7 +327,9 @@
 
         .review-item-text {
           margin-top: 15px;
+          font-family: 'Montserrat', sans-serif;
           font-size: 16px;
+          font-weight: 400;
           line-height: 140%;
           color: $dark-blue-text-color;
         }
