--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -9,6 +9,11 @@
   font-family: "Montserrat";
   font-weight: 400;
 }
+@font-face {
+  src: url("../fonts/Montserrat-SemiBold.ttf");
+  font-family: "Montserrat";
+  font-weight: 600;
+}
 
 @font-face {
   src: url("../fonts/Lora-Regular.woff");
